<resources>
    <string name="app_name">NASA IOTD</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="map_api_key">AIzaSyBuSw45V6EGSsK6yvRdUfYFisqpErAYJ84</string>
    <string name="InfoAboutApp">🌠 Unleash the wonders of the universe with the NASA Image of the Day Generator app! Immerse yourself in a stellar collection of daily images, saved memories, and real-time tracking of the International Space Station. Your window to the cosmos has never been more captivating. Explore, save, and marvel at the beauty of space!</string>
    <string name="HomeInfo">🚀 Welcome to the Nasa Image of the Day home screen! Explore the cosmos by either gazing at today\'s celestial wonders, picking a specific date to unlock the universe\'s past, enjoying your curated collection, or tracking the International Space Station in real-time. Your cosmic journey begins here!</string>
    <string name="ImageInfo">✨ Wow, behold this captivating photo from the cosmos! Capture its beauty forever by saving it to your collections (tap the save icon). Dive deeper into the mysteries behind the image by tapping the text for a detailed description. Every snapshot has a story; unfold it!</string>
    <string name="CollectionsInfo">🌌 Your celestial haven for NASA\'s finest images! Tap an image to unveil its secrets, rename it to make it uniquely yours, or bid it farewell by removing it from your cosmic collection. Your personal gallery of wonders awaits exploration.</string>
    <string name="TrackingIssInfo">🛰️ Track the International Space Station in real-time! Witness its celestial journey with updates every 10 seconds, revealing its path, altitude, velocity, and visibility levels. Press the tracking button for an interstellar experience; once tracking, press again to pause the cosmic updates.</string>
    <string name="HLtitle">National Aeronautics and Space Administration</string>
    <string name="HLbody">Space Image of the Day Generator v.1</string>
    <string name="NMhome">Homepage</string>
    <string name="NMtoday">Today\'s Space Image</string>
    <string name="NMpick">Pick a Day</string>
    <string name="NMcollection">Collections</string>
    <string name="NMiss">Track the I.S.S.</string>
    <string name="NMinfo">Information about App</string>
    <string name="AMhome">Home</string>
    <string name="AMsave">Save</string>
    <string name="AMinfo">Info</string>
    <string name="CFcollection">Collection</string>
    <string name="CFEconfirm">CONFIRM</string>
    <string name="CFErename">RENAME</string>
    <string name="CFEremove">REMOVE</string>
    <string name="CFEdef1">NON EXISTENT</string>
    <string name="CFEdef2">No date available</string>
    <string name="CFEdef3">No description available</string>
    <string name="CFEdel1">Deletion was successful</string>
    <string name="CFEdel2">Deletion was unsuccessful</string>
    <string name="CFEdel3">File not found for deletion</string>
    <string name="CFEren1">Image renamed</string>
    <string name="CFEren2">Failed to rename image</string>
    <string name="HFnasa">NASA</string>
    <string name="HFiotd">Image of the Day</string>
    <string name="HFtoday">Today\'s Image of Space</string>
    <string name="HFpick">Pick a Date</string>
    <string name="HFsaved">Saved Photos</string>
    <string name="HFiss">Track the I.S.S.</string>
    <string name="HFtodayT">Today\'s Image Button Clicked</string>
    <string name="HFpickT">Selected Date: </string>
    <string name="HFsavedT">Saved Photos Button Clicked</string>
    <string name="HFissT">Track the I.S.S. Button Clicked</string>
    <string name="IFtitle">Track the ISS</string>
    <string name="IFgoogle">Google Map</string>
    <string name="IFtrack">Track</string>
    <string name="IVFfile">File has been created: </string>
    <string name="IVFundo">Undo</string>
    <string name="IVFundoS">Undo successful</string>
    <string name="IVFimage">Image of </string>
    <string name="ISFtracking">Tracking..</string>
    <string name="ISFresume">Resume</string>
    <string name="ISFstart">Started Tracking ISS</string>
    <string name="ISFstop">Stopped Tracking ISS</string>
    <string name="ISFfail">Failed to fetch ISS location</string>
    <string name="ISFlocation">ISS Location: </string>
    <string name="MAimage">No image to save</string>
    <string name="MAselected">Selected Date: </string>
</resources>